# OpenGLPlayroom

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindGLM.cmake  compile_shader_package.cmake  deploy_glbinding.cmake  deploy_gllibs.cmake  deploy_qt.cmake  include_dirs.cmake
scripts/: CMakeLists.txt  compile_shader_package.py
src/: CMakeLists.txt
src/playroom/: CMakeLists.txt  debug.cpp  debug.h  main.cpp  shaders.cpp  shaders.h
src/playroom/res/: CMakeLists.txt
src/shader_tools/: CMakeLists.txt
src/shader_tools/error_handling/: CMakeLists.txt  Error.cpp  Error.h  error_handling_utils.cpp  error_handling_utils.h  log.cpp  log.h
src/shader_tools/file_utils/: CMakeLists.txt  file_utils.cpp  file_utils.h
src/shader_tools/shader_package/: CMakeLists.txt  Error.cpp  Error.h  Package.cpp  Package.h  PackageLoader.cpp  PackageLoader.h  package.cpp  package_loader.cpp  package_loader.h
src/shader_tools/shader_preview/: CMakeLists.txt  application_strings.cpp  application_strings.h  argument_parser.cpp  argument_parser.h  main.cpp  shader_preview_ui.cpp  shader_preview_ui.h
src/shader_tools/tests/: CMakeLists.txt  PackageLoader_test.cpp  file_utils_test.cpp  package_loader_test.cpp
src/shader_tools/tests/test_data/: test_package.shp
